<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartHome</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">欢迎使用!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_setup_dev">SetupDevActivity</string>
    <string name="title_activity_dev_view">DevViewActivity</string>
    <string name="app_version">v0.3.0</string>
    <string name="tvApSsidTitle">SSID: </string>
    <string name="tvPasswordTitle">Password: </string>
    <string name="switchIsSsidHiddenTitle">SSID is Hidden</string>
    <string name="btnConfirmTitle">Confirm</string>

</resources>