<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <!-- title -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="#4173A8"
        android:orientation="horizontal" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp" >

            <TextView
                android:id="@+id/titleSmartlink"
                android:layout_width="20dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/control2_03" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="SmartLink"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvApSsid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tvApSsidTitle"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvApSssidConnected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:singleLine="true"
            android:textSize="24sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvApPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tvPasswordTitle"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtApPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:singleLine="true"
            android:text=""
            tools:ignore="TextFields" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switchIsSsidHiddenTitle"
            android:textSize="24sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/switchIsSsidHidden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnConfirmTitle"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>